--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,15 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Commands / Events
+src/buttons/
+src/commands/
+src/events/
+src/menus/
+src/messages/
+src/modals/
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
