--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chalk": "^5.3.0",
     "discord.js": "^14.15.1",
     "dotenv": "^16.4.5",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "toolkit-discord": "^0.1.5"
   }
 }
