--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ src/events/
 src/menus/
 src/messages/
 src/modals/
-
+prisma/schema.prisma
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
